--- a/MongoDB分享/索引与集合.md
+++ b/MongoDB分享/索引与集合.md
@@ -7,16 +7,15 @@
 
 **本文只对MongoDB相关索引进行介绍，至于相对应的使用方法，可以在附带的官网链接上找到或者自己上网查找相关资料，此处不再赘述。**
 
+学习资料：
 
-MongoDB官网：https://www.mongodb.com/ 
-
-MongoDB官方教程：https://docs.mongodb.com/tutorials/ 
-
-MongoDB中文社区：http://www.mongoing.com/ 
-
-MongoDB官方文档：https://docs.mongodb.com/manual/ 
-
-中文社区对官方文档的翻译（以如觉有异常，以官方英文版文档为准）：http://docs.mongoing.com/manual-zh/index.html
+ - MongoDB官网：https://www.mongodb.com/ 
+ - MongoDB官方教程：https://docs.mongodb.com/tutorials/ 
+ - MongoDB中文社区：http://www.mongoing.com/ 
+ - MongoDB官方文档：https://docs.mongodb.com/manual/ 
+ - 中文社区对官方文档的翻译（以如觉有异常，以官方英文版文档为准）：http://docs.mongoing.com/manual-zh/index.html
+ - 《MongoDB权威指南》（可在公司图书馆借阅）
+ - 《大数据存储 MongoDB实战指南》（可在公司图书馆借阅）
 
 # 二，索引介绍 #
 ## 1，默认索引 ##
