--- a/MongoDB分享/复制集.md
+++ b/MongoDB分享/复制集.md
@@ -22,7 +22,7 @@ mongodb各个节点常见的搭配方式为：一主一从、一主多从。
 
 MongoDB复制结构图如下所示：
 
-![](/replica-set-read-write-operations-primary.png)
+![](replica-set-read-write-operations-primary.png)
 
 以上结构图中，客户端从主节点读取数据，在客户端写入数据到主节点时， 主节点与从节点进行数据交互保障数据的一致性。
 
@@ -46,15 +46,15 @@ MongoDB复制结构图如下所示：
 
 一主两从：
 
-![](/replica-set-primary-with-two-secondaries.png)
+![](replica-set-primary-with-two-secondaries.png)
 
 一主一从一仲裁：
 
-![](/replica-set-primary-with-secondary-and-arbiter.png)
+![](replica-set-primary-with-secondary-and-arbiter.png)
 
 自动故障转移：当主节点发生故障时，剩下的节点能够通过选举，选举出新的主节点。
 
-![](/replica-set-trigger-election.png)
+![](replica-set-trigger-election.png)
 
 # 四，读参考（Read Preference） #
 读参考是指MongoDB将客户端的读请求路由到复制集中指定的成员上，默认情况下读操作的请求被路由到复制集的primary节点上。从primary节点上进行读取能够保证读到的数据是最新的，但是将读操作路由到其他secondary节点上去后，由于从primary节点同步数据到secondary节点会产生时间差，可能导致从secondary节点上读到的数据不是最新的。当然这对于实时性要求不是很高的绝大部分应用程序来说，并不是大问题。
@@ -63,12 +63,12 @@ MongoDB复制结构图如下所示：
 
 它最大的好处是能够使客户端的读请求路由到最佳的secondary节点上（如最近的节点），提高客户端的读效率，并且一定程度上实现读写分离。
 
-![](/replica-set-read-preference.png)
+![](replica-set-read-preference.png)
 
 # 五，写关注（Write Concern） #
 对于某些应用程序来说，写关注是重要的。它能判断哪些写操作成功写入了，哪些失败了。对于失败的操作，驱动程序能返回错误，由应用程序决定怎么处理。如果没有写关注，应用程序发送一个写操作到socket后，就不会管后面发生了什么情况，不知道是否成功写入数据库，这种情形对于日志类型的应用程序还是可以接受的，因为偶尔的写失败不会影响整个日志的监控情况。带有写关注的操作会等到数据库确认成功写入后才能返回，因此写关注会带来一点性能的损失。
 
-![](/crud-write-concern-w2.png)
+![](crud-write-concern-w2.png)
 
     db.products.insert(
        { item: "envelopes", qty : 100, type: "Clasp" },
