--- a/MongoDB分享/分片.md
+++ b/MongoDB分享/分片.md
@@ -62,9 +62,9 @@ Routers（mongos）:
 不过范围分片可能会导致数据分配不平衡的问题。
 
 # 三，总结 #
-分片集群上的锁范围局限在每一个片上，而不是整个集群，每一个片上的操作都是独立的，因此不会影响其他片上的操作。分片集群通过路由器mongos分发读写操作到各个片上，整体上提高了系统的并发性和吞吐量。并不是所有的系统都适合部署成分片集合，只有当数据量打、读写请求很高时才适合用分片集群。一旦部署成分片集群，那么集群中的每一个片都应该部署成复制集的形式，提高系统的可靠性和故障恢复的能力。分片时片键的选择很重要，不好的片键会降低系统的性能。
+分片集群上的锁范围局限在每一个片上，而不是整个集群，每一个片上的操作都是独立的，因此不会影响其他片上的操作。分片集群通过路由器mongos分发读写操作到各个片上，整体上提高了系统的并发性和吞吐量。并不是所有的系统都适合部署成分片集合，只有当数据量大、读写请求很高时才适合用分片集群。一旦部署成分片集群，那么集群中的每一个片都应该部署成复制集的形式，提高系统的可靠性和故障恢复的能力。分片时片键的选择很重要，不好的片键会降低系统的性能。
 
-但是，部署为分片会把系统架构变得复杂，运维的维护难度也会困难很多，校招项目不算大项目，个人感觉并不适合部署为分片。
+**但是，部署为分片会把系统架构变得复杂，运维的维护难度也会困难很多，校招项目不算大项目，个人感觉并不适合部署为分片。**
 
 对于数据量大引发的读写性能问题，例如resume，可以通过分表的形式，将resume根据校招社招及年份进行分表，提高读写性能。
 
